--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -56,5 +56,8 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "@metamask/key-tree": "^6.2.1"
   }
 }
